# hail-mary

./: .gitignore  .gitmodules  README.md  ansible.cfg  makefile  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
kolla-configs/: inventory  inventory.ini
kolla-configs/etc/kolla/: admin-openrc-system.sh  admin-openrc.sh  clouds.yaml  globals.yml  globals.yml.tmp  public-openrc-system.sh  public-openrc.sh
kolla-configs/etc/kolla/config/nuetron/: ml2_conf.ini  openvswitch_agent.ini
kolla-configs/etc/kolla/group_vars/: control.yml
kolla-configs/etc/kolla/neutron/: bgp_dragent.ini  ml2_conf.ini
playbooks/create-bgp/: annouce_ip.sh  setup_bgp.sh
playbooks/create-bridge/: inventory.ini  netplan_template.j2  setup_bridge.yml
playbooks/create-user/: inventory.ini  setup_user.yml
playbooks/ping/: inventory.ini
